<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.chris.week5daily1.GeocodingApiActivity">

    <TextView
        android:id="@+id/tvEnterLat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enter Latitude"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etLatitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Latitude" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enter Longitude"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etLongitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Longitude" />

    <Button
        android:id="@+id/btnRapi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onReverseGeocoding"
        android:text="ReverseGeocoding Using Api" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Address:"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enter Street Address"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Street Address" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enter City"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="City" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enter State Abbreviation"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="State Abbreviation" />

    <Button
        android:id="@+id/btnGapi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onGeocoding"
        android:text="Geocoding Using Api" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Latitude, Longitude:"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvLatLong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp" />
    <Button
        android:text="View Addresses On Map"
        android:onClick="goToMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
